Finishing up the Floret features

--- a/mod/Domestication/localisation/domestication_l_english.yml
+++ b/mod/Domestication/localisation/domestication_l_english.yml
@@ -41,3 +41,10 @@
  SPECIES_STERILE_HAUSTORIC_IMPLANT:0 "The Haustoric Implant invariably renders florets sterile."
  SPECIES_COLONIZE_HAUSTORIC_IMPLANT:0 "Florets cannot be allowed to venture into the dangerous galaxy unaccompanied by their owners."
  DOMESTICATOR_POP_CONTROLS_NOT_ALLOWED:0 "Cannot enable population controls for non-implanted florets."
+ 
+ tech_haustoric_implant:0 "Haustoric Implants"
+ tech_haustoric_implant_desc:0 "Symbiotic subdermal implants will provide better control over our florets' health and safety. Plus, they're so much cuter when they can't even think."
+ 
+ domestication.2.name:0 "Haustoric Implants"
+ domestication.2.desc:0 "Recent breakthroughs in bio-engineering have given us a remarkable new tool for improving the lives of our florets: the Haustoric Implant. Grown from their owner's genetic material, the implant is surgically placed near the floret's spine or equivalent anatomy. Over the course of a week, the implant matures and spreads its vines throughout the floret's body, interfacing with their endocrine, nervous and muscular systems. It can automatically or manually administer xenodrugs, alter the floret's mental state and provide limited muscle control overrides, while also rendering the floret irrevocably sterile.\n\nOur surgery centers are working at full capacity to implant our existing florets, and new florets will receive the implant as a mandatory part of their domestication."
+ domestication.2.a:0 "Wonderful!"
