--- a/mod/Domestication/localisation/domestication_l_english.yml
+++ b/mod/Domestication/localisation/domestication_l_english.yml
@@ -17,6 +17,8 @@
  civic_tooltip_domesticators_effects:0 "Allows pops with $citizenship_limited$ and $living_standard_chemical_bliss$ to 'work' as $job_floret_plural$."
  
  name_list_PLANT5:0 "Plantoid (Affini)"
+ PLANT_hand:2 "vine"
+ PLANT_hand_plural:1 "vines"
  
  FLAG_CATEGORY_hdg:0 "HDG"
 
@@ -43,6 +45,7 @@
  SPECIES_STERILE_HAUSTORIC_IMPLANT:0 "The Haustoric Implant invariably renders florets sterile."
  SPECIES_COLONIZE_HAUSTORIC_IMPLANT:0 "Florets cannot be allowed to venture into the dangerous galaxy unaccompanied by their owners."
  DOMESTICATOR_POP_CONTROLS_NOT_ALLOWED:0 "Cannot enable population controls for non-implanted florets."
+ domesticated_species_no_citizenship:0 "This species has had its political rights restricted for its own safety."
  
  tech_haustoric_implant:0 "Haustoric Implants"
  tech_haustoric_implant_desc:0 "Symbiotic subdermal implants will provide better control over our florets' health and safety. Plus, they're so much cuter when they can't even think."
@@ -51,6 +54,16 @@
  domestication.2.desc:0 "Recent breakthroughs in bio-engineering have given us a remarkable new tool for improving the lives of our florets: the Haustoric Implant. Grown from their owner's genetic material, the implant is surgically placed near the floret's spine or equivalent anatomy. Over the course of a week, the implant matures and spreads its vines throughout the floret's body, interfacing with their endocrine, nervous and muscular systems. It can automatically or manually administer xenodrugs, alter the floret's mental state and provide limited muscle control overrides, while also rendering the floret irrevocably sterile.\n\nOur surgery centers are working at full capacity to implant our existing florets, and new florets will receive the implant as a mandatory part of their domestication."
  domestication.2.a:0 "Wonderful!"
  
- domesticated_empire_1: "[domesticated_regime.GetAdjective] Protectorate"
- domesticated_empire_2: "[domesticated_regime.GetAdjective] Administration"
- domesticated_empire_3: "[domesticated_regime.GetAdjective] Commonwealth"
+ domesticated_protectorate:0 "Doemsticated Protectorate"
+ 
+ 01_DEMAND_DOMEST_PROPOSE:0 "The §Y[From.GetName]§! hereby demands your immediate surrender and compliance with the [Root.GetSpeciesAdj] Domestication Program. Please do not fight us, we would hate to see harm come to any sophont."
+ 01_DEMAND_DOMEST_SELECT:0 "Let me see if I understand this correctly... you want to domesticate the [Root.GetName]?"
+ 02_DEMAND_DOMEST_SELECT:0 "I don't even know what to say to that..."
+ 03_DEMAND_DOMEST_SELECT:0 "You... you want to keep [Root.GetSpeciesNamePlural] as... livestock?"
+ 04_DEMAND_DOMEST_SELECT:0 "Have you lost your mind, [From.GetSpeciesNameInsult]?"
+ 01_DEMAND_DOMEST_ACCEPT:0 "We accept your terms and trust that we'll be safe in your [From.GetSpeciesHandNamePlural]. Could we, uh, start the domestication process immediately...?"
+ 02_DEMAND_DOMEST_ACCEPT:0 "We have little choice but to accept your... \"domestication.\" Um, why are you looking at me like that?"
+ 01_DEMAND_DOMEST_REFUSE:0 "We cannot accept your proposal in good conscience. Make of what what you will."
+ 02_DEMAND_DOMEST_REFUSE:0 "We would never surrender our freedom to the likes of you!"
+ 03_DEMAND_DOMEST_REFUSE:0 "Free [Root.GetSpeciesNamePlural] will never be slaves to [From.GetSpeciesNamePluralInsult]!"
+ 04_DEMAND_DOMEST_REFUSE:0 "We would sooner reduce [Root.Capital.GetName] to ashes than accept your shackles!"
