--- a/mod/Domestication/localisation/domestication_l_english.yml
+++ b/mod/Domestication/localisation/domestication_l_english.yml
@@ -54,6 +54,8 @@
 
  tech_haustoric_implant:0 "Haustoric Implants"
  tech_haustoric_implant_desc:0 "Symbiotic subdermal implants will provide better control over our florets' health and safety. Plus, they're so much cuter when they can't even think."
+ ADD_HAUSTORIC_IMPLANT_BONUSES:0 "Floret pops product additional Amenities\nUnlocks $trait_haustoric_implant|Y$ trait"
+ ADD_BIORHYTHM_AMPLIFICATION_BONUSES:0 "$job_floret_plural|Y$ increase $ruler|Y$ and $specialist|Y$ job output\nBetter chance to obtain $job_floret_plural|Y$ from events"
 
  SUBJECT_domesticated_protectorate:0 "Doemsticated Protectorate"
 
@@ -71,12 +73,11 @@
 
  leader_trait_beeple_gov:0 "Floret - Syncretic"
  leader_trait_beeple_gov_desc:0 "This leader has a floret from their syncretic species. While this species no longer plays active roles in reproduction or agriculture, knowledge of its former roles can yield surprising insights in both fields. It is also unreasonably adorable."
- #leader_trait_beeple_tooltip:0 "Food Production from Jobs: +2%\nLeader Experience Gain: -5%\nLeader Upkeep: +10%"
 
  leader_trait_cutie_gov:0 "Floret - Cutie"
  leader_trait_cutie_gov_desc:0 "While all florets are cute, this floret is just exceptionally cute. The people of this governors sector are uplifted every time it appears in an announcement broadcast."
  leader_trait_cutie_sci:0 "Floret - Cutie"
- leader_trait_cutie_sci_desc:0 "While all florets are cute, this floret is just exceptionally cute. Its presence in the research lab encourages everyone to do their best to make our covilization a better place."
+ leader_trait_cutie_sci_desc:0 "While all florets are cute, this floret is just exceptionally cute. Its presence in the research lab encourages everyone to do their best to make our civilization a better place."
  leader_trait_cutie_adm:0 "Floret - Cutie"
  leader_trait_cutie_adm_desc:0 "While all florets are cute, this floret is just exceptionally cute. The fleet's crew have adopted it as their mascot, and invoke its name as they charge into battle."
  leader_trait_cutie_gen:0 "Floret - Cutie"
