--- a/mod/Domestication/localisation/domestication_events_l_english.yml
+++ b/mod/Domestication/localisation/domestication_events_l_english.yml
@@ -16,3 +16,7 @@
  domestication_leader.new_cutie_gen:0 "General [new_owner.GetName] has found [new_owner.GetHimselfHerself] a brand new floret, a [new_floret.Species.GetName] named [new_floret.GetName] that is just cute as a button!"
  domestication_leader.3.a:0 "What a cutie!"
  domestication_leader.3.fallback:0 "This is fallback text which means this event did not fire correctly."
+
+ domestication.9.name:0 "New Arrivals from the [br_home_empire.GetName]"
+ domestication.9.desc:0 "Heeding the call of our §Y$sm_biorhythm_transmitter$§!, [br_resettle_pop.GetSpeciesAdj] sophonts from [br_resettle_homeworld.GetName] have departed their homeworld en masse. The [Root.GetName] has welcomed them with open [Root.GetSpeciesHandNamePlural] to their new home on [br_resettle_newworld.GetName].\n\nEarly reports indicate that many of the new arrivals have already volunteered for domestication."
+ domestication.9.a:0 "Welcome!"
