--- a/mod/Domestication/localisation/domestication_events_l_english.yml
+++ b/mod/Domestication/localisation/domestication_events_l_english.yml
@@ -9,7 +9,7 @@
  domestication.9.a:0 "Welcome!"
 
  domestication_leader.2.name:0 "Admiral Rescues New Floret"
- domestication_leader.2.desc:0 "During the recent battle in [system.GetName], Admiral §Y[new_owner.GetName]§ personally rescued a brave little [new_floret.Species.GetName] from the hyperdrive core of a wrecked [defeated_country.GetAdj] ship. After bonding with the Admiral during [new_floret.GetHerHis] recovery, the sophont volunteered [new_floret.GetHimselfHerself] for domestication and is now known as §Y[new_floret.GetName]§."
+ domestication_leader.2.desc:0 "During the recent battle in [system.GetName], Admiral §Y[new_owner.GetName]§ personally rescued a scared little [new_floret.Species.GetName] from the hyperdrive core of a wrecked [defeated_country.GetAdj] ship. After bonding with the Admiral during [new_floret.GetHerHis] recovery, the sophont volunteered [new_floret.GetHimselfHerself] for domestication and is now known as §Y[new_floret.GetName]§."
  domestication_leader.2.a:0 "What a brave little floret!"
 
  domestication_leader.3.name:0 "New Floret Domesticated"
