--- a/mod/Domestication/localisation/domestication_l_english.yml
+++ b/mod/Domestication/localisation/domestication_l_english.yml
@@ -99,7 +99,7 @@
  leader_trait_cutie_gen:0 "Floret - Cutie"
  leader_trait_cutie_gen_desc:0 "While all florets are cute, this floret is just exceptionally cute. Inspired by its cuteness, soldiers do all they can to disable hostile aliens and prevent casualties on all sides so as not to make the floret sad."
  leader_trait_warp_eng_adm:0 "Floret - Hyperdrive Engineer"
- leader_trait_warp_eng_adm_desc:0 "This floret isn't actually allowed to work in the hyperdrive core, but it'd be rude to ignore it every time it demands that we engage the hyperdrive mid-battle."
+ leader_trait_warp_eng_adm_desc:0 "This floret isn't actually allowed to work in the hyperdrive core, but it would be mean to ignore it §Yevery§ time it demands that we engage the hyperdrive mid-battle."
 
  # Ascension perks
  ap_benefic_acquisition:0 "Benefic Acquisition"
