Tech tweaks and icon fixes

--- a/mod/Domestication/localisation/domestication_l_english.yml
+++ b/mod/Domestication/localisation/domestication_l_english.yml
@@ -20,6 +20,10 @@
  TRAIT_HAUSTORIC_IMPLANT_EFFECT:0 "£amenities£ Amenities from £job£ Jobs: §G+20%§!\n£unity£ Unity from £job£ Jobs: §G+5%§!\nEmpire Sprawl from Pops: §G-5%§!\nAvailable species rights are restricted"
  TRAIT_HAUSTORIC_IMPLANT_LONELY_TOOLTIP:0 "Pop Happiness when away from owners: §R-60%§!\nPop Resource Production when away from owners: §R-60%§!"
 
+ # Factions
+ pft_domesticator_faction:0 "Domesticator Faction"
+ pft_domesticator_faction_desc:1 "Domesticator Factions desire for a multi-species society with a wide variety of sophonts to domesticate. They dislike species-wide Slavery and Purges.\n\n§LXenophile Ethos§!"
+
  # Faction demands
  DOMESTICATOR_OVERLORD:0 "Domestication Astropolitics"
  DOMESTICATOR_NOT_OVERLORD:0 "$DOMESTICATOR_OVERLORD$"
@@ -70,9 +74,11 @@
 
  # Technology and tooltips
  tech_haustoric_implant:0 "Haustoric Implants"
- tech_haustoric_implant_desc:0 "Symbiotic subdermal implants will provide better control over our florets' health and safety. Plus, they're so much cuter when they can't even think."
- ADD_HAUSTORIC_IMPLANT_BONUSES:0 "Floret pops product additional Amenities\nUnlocks §Y|$trait_haustoric_implant$§! trait"
- ADD_BIORHYTHM_AMPLIFICATION_BONUSES:0 "§Y$job_floret_plural$§! increase §Y$ruler$§! and §Y$specialist$§! job output\nBetter chance to obtain §Y$job_floret_plural$§! from events"
+ tech_haustoric_implant_desc:0 "Symbiotic subdermal implants provide better control over our florets' health and safety. Plus, they're so much cuter when they can't even think."
+ ADD_HAUSTORIC_IMPLANT_BONUSES:0 "Floret pops product additional Amenities"
+ tech_biorhythm_amplification:0 "Biorhythm Amplification"
+ tech_biorhythm_amplification_desc:0 "Amplifying our natural biorhythms causes sophonts' biological systems to mirror them in a harmonious feedback loop that spirals inevitably toward domestication."
+ ADD_BIORHYTHM_AMPLIFICATION_BONUSES:0 "§Y$job_floret_plural$§! increase £pop_cat_ruler£ §Y$pop_cat_ruler$§! and £pop_cat_specialist£ §Y$pop_cat_specialist$§! job output\nBetter chance to obtain §Y$job_floret_plural$§! from events"
 
  # Subject type
  SUBJECT_domesticated_protectorate:0 "Domesticated Protectorate"
